updating the yaml files

--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -10,7 +10,7 @@ on:
       - dev
       - 'dev-*'
       - 'feat/**'
-    paths: 
+    paths-ignore: 
       - '.github/workflows/*'
 jobs:
   deploy:
